--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" href="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
-    <title>My First Webpage, with JavaScript</title>
+    <title>My Second Webpage, with JavaScript</title>
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"> </script>
@@ -33,10 +33,9 @@
         <div class="page-content">
           Click The Button.
         </div>
-        <br/>
+        <br />
         <!-- Coloured raised Button -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
-        onclick="myButtonClicked()">
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
           Click Me!
         </button>
         <br />
@@ -47,4 +46,4 @@
       </main>
     </div>
   </body>
-  </html>
+</html>
