--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,10 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"> </script>
     <script>
-      function myButtonClicked() {
+      function Button1() {
+        alert("hello, world!")
+      }
+      function Button2() {
         alert("hello, world!")
       }
     </script>
@@ -26,7 +29,6 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">Hello, World! with JS</span>
-
         </div>
       </header>
       <main class="mdl-layout__content">
@@ -35,14 +37,18 @@
         </div>
         <br />
         <!-- Coloured raised Button -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-          Click Me!
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" 
+        onclick="Button1()"
+        >
+          Hello World!
+        <!-- Coloured raised Button -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+        onclick="Button2()"
+        >
+          Css
         </button>
         <br />
         <br />
-        <p>
-          <a href="./index2.html">My Index.html page</a>
-        </p>
       </main>
     </div>
   </body>
