--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="ics2o" />
     <meta name="author" content="Lucas Osmond" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css2" />
+    <link rel="stylesheet" href="./css/style2.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-green.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
