--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="author" content="Lucas Osmond" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-green.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.blue_grey-green.min.css"
+    />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" href="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" href="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -16,7 +22,7 @@
     <title>My First Webpage, with JavaScript</title>
   </head>
   <body>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"> </script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script>
       function myButtonClicked() {
         alert("hello, world!")
@@ -26,17 +32,16 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">Hello, World! with JS</span>
-
         </div>
       </header>
       <main class="mdl-layout__content">
-        <div class="page-content">
-          Click The Button.
-        </div>
-        <br/>
+        <div class="page-content">Click The Button.</div>
+        <br />
         <!-- Coloured raised Button -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
-        onclick="myButtonClicked()">
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+          onclick="myButtonClicked()"
+        >
           Click Me!
         </button>
         <br />
@@ -47,4 +52,4 @@
       </main>
     </div>
   </body>
-  </html>
+</html>
