--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Lucas Osmond" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style2.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-green.min.css"/>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -39,12 +40,14 @@
         onclick="Button1()"
         >
           Hello World!
+        </button>
+        <br />
+        <br />
         <!-- Coloured raised Button -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
         onclick="Button2()"
         >
           Css
-        </button>
         </button>
         <br />
         <br />
